clusters/home/apps/cloud/openwebui/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openwebui
  labels:
    goldilocks.fairwinds.com/enabled: "true"
