clusters/home/apps/cloud/openwebui/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: open-webui
  namespace: openwebui
  annotations:
    external-dns.kubernetes.io/hostname: "pythia.layertwo.dev"
    external-dns.kubernetes.io/target: "proxy-external.layertwo.dev"
    layertwo.dev/publish: "all"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pythia.layertwo.dev`)
      kind: Rule
      services:
        - name: open-webui
          port: 80
